--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -36,31 +36,38 @@
         android:maxHeight="200dp"
         android:src="@drawable/menu" />
 
+    
+     <FrameLayout
+        android:id="@+id/frameText"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/frameClock" >
+
     <TextView
         android:id="@+id/textHome"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/frameClock"
-        android:layout_centerHorizontal="false"
-        android:layout_centerVertical="false"
+        android:layout_gravity="center"
         android:layout_marginLeft="20dp"
-        android:layout_marginRight="40dp"
+        android:layout_marginRight="20dp"
         android:background="@drawable/text_home_bg"
         android:paddingBottom="8dp"
         android:paddingLeft="8dp"
-        android:paddingRight="20dp"
+        android:paddingRight="40dp"
         android:paddingTop="8dp"
-        android:text="TextView, this is text bla bla bla bla this is random" />
+        android:text="TextView, this is text bla bla bla bla this is random"
+        android:textSize="22sp"
+        android:textStyle="bold" />
 
     <ImageButton
         android:id="@+id/checkHome"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignBottom="@+id/textHome"
-        android:layout_alignParentRight="true"
-        android:layout_marginBottom="3dp"
-        android:layout_marginRight="20dp"
+        android:layout_gravity="right|center"
+        android:layout_marginRight="10dp"
         android:background="@drawable/circle_base"
         android:src="@drawable/circle_check" />
+    
+     </FrameLayout>
 
 </RelativeLayout>
