at info view: change font

--- a/res/layout/info_activity.xml
+++ b/res/layout/info_activity.xml
@@ -34,7 +34,8 @@
         android:layout_below="@+id/timeText"
         android:layout_centerVertical="true"
         android:layout_margin="20dp"
-        android:text="@string/info1" />
+        android:text="@string/info1"
+        android:textSize="22sp" />
 
     <ImageButton
         android:id="@+id/backButton"
@@ -53,7 +54,7 @@
         android:layout_alignTop="@+id/timeText"
         android:background="@drawable/seletetimebutton"
         android:src="@drawable/seletetimebutton" />
-
+
     <TextView
         android:id="@+id/extraText"
         android:layout_width="wrap_content"
@@ -61,8 +62,9 @@
         android:layout_alignLeft="@+id/infoText"
         android:layout_alignRight="@+id/infoText"
         android:layout_below="@+id/infoText"
-        android:text="TextView" />
-
+        android:text="TextView"
+        android:textSize="22sp" />
+
     <ImageButton
         android:id="@+id/checkInfo"
         android:layout_width="wrap_content"
