--- a/res/layout/info_activity.xml
+++ b/res/layout/info_activity.xml
@@ -1,10 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/bgInfo"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/bg1"
     android:orientation="vertical" >
-
+	
+    
     <TextView
         android:id="@+id/timeText"
         android:layout_width="wrap_content"
