--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -25,17 +25,28 @@
        android:hand_minute="@drawable/hand_minute" />
     </FrameLayout>
     
-    
-    <ImageView
-        android:id="@+id/imageView1"
+     <FrameLayout
+        android:id="@+id/frameMenu"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
-        android:layout_alignParentLeft="true"
+        >
+    <ImageView
+        android:id="@+id/menuBg"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:adjustViewBounds="true"
         android:maxHeight="200dp"
         android:src="@drawable/menu" />
 
+    <ImageButton
+        android:id="@+id/scoreButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:background="@drawable/menu_ontop"
+        android:src="@drawable/menu_ontop" />
+
+    </FrameLayout>
     
      <FrameLayout
         android:id="@+id/frameText"
